Bug 469618 - Moving layers in layer stack causes thumbnail to disappear temporarily
Summary: Moving layers in layer stack causes thumbnail to disappear temporarily
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-11 12:43 UTC by Lynx3d
Modified: 2023-05-16 12:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lynx3d 2023-05-11 12:43:48 UTC
Every time you move a layer in the layer stack (move up/down, change parent etc.), the layer thumbnail goes blank for ~5s.
And if you undo the change before the thumbnail is regerated, it doesn't get restored until something else triggers thumbnail updates.

Krita master f0a28f5ad2e2f5f7950a1b4cbfd7eb55fbbfe8af
Comment 1 Dmitry Kazakov 2023-05-16 12:39:08 UTC
Git commit 0e564cea6ee24d57b388662d1bd4b5767d55fed2 by Dmitry Kazakov.
Committed on 16/05/2023 at 12:38.
Pushed by dkazakov into branch 'master'.

Fix layer thumbnails not to reset on every node move

M  +2    -0    libs/ui/KisIdleTasksManager.cpp
M  +21   -1    libs/ui/KisLayerThumbnailCache.cpp
M  +2    -0    libs/ui/KisLayerThumbnailCache.h
M  +2    -5    libs/ui/kis_node_model.cpp
M  +0    -2    libs/ui/kis_node_model.h
M  +0    -1    plugins/dockers/layerdocker/LayerBox.cpp

https://invent.kde.org/graphics/krita/commit/0e564cea6ee24d57b388662d1bd4b5767d55fed2