Fix layer thumbnails not to reset on every node move

BUG:469618