libs/ui/kis_node_model.h
@@ -125,8 +125,6 @@ public: // from QAbstractItemModel
     bool showGlobalSelection() const;
     void setPreferredThumnalSize(int preferredSize) const;
 
-    void clearThumbnailsCache();
-
 public Q_SLOTS:
     void setShowGlobalSelection(bool value);
 
